eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mono-finance-api-deployment
  labels:
    app: mono-finance-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mono-finance-api
  template:
    metadata:
      labels:
        app: mono-finance-api
    spec:
      containers:
      - name: mono-finance-api
        image: 926731416094.dkr.ecr.us-east-1.amazonaws.com/monofinance:latest
        ports:
        - containerPort: 8080
