eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mono-finance-api-service
spec:
  selector:
    app: mono-finance-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
